# Xpring-SDK-Demo

./: .gitignore  .gitmodules  CODEOWNERS  README.md
.circleci/: config.yml
java/: README.md  dependency-reduced-pom.xml  pom.xml
node/: README.md  index.js  package-lock.json  package.json
node/src/: index-ilp.js  index-payid-ALL.js  index-payid-All.js  index-payid-BTC.js  index-payid-XRPL.js  index-payid.js  index-send-eth-to-payid.js  index-send-xrp-to-payid.js  index-xpring.js  index-xrp.js  index.js
python/: README.md  main.py  pyproject.toml
swift/: .gitignore  .gitmodules  Cartfile  Cartfile.resolved  Podfile  README.md  build_osx.sh  project.yml
swift/Frameworks/BoringSSL.framework/: BoringSSL
swift/Frameworks/CgRPC.framework/: CgRPC
swift/Frameworks/SwiftGRPC.framework/Headers/: SwiftGRPC-Swift.h
swift/ILP/: Cartfile  Cartfile.resolved  README.md
swift/ILP/IlpXpringSDKDemo.xcodeproj/: project.pbxproj
swift/ILP/Sources/: main.swift
swift/Sources/: main.swift
swift/Sources/ILP/: main.swift
swift/Sources/PayID/: All.swift  BTC.swift  XRPL.swift  main.swift
swift/Sources/XRP/: main.swift
swift/Sources/Xpring/: main.swift
swift/XpringKitDemo/: main.swift
swift/XpringKitDemo.xcodeproj/: project.pbxproj
swift/XpringKitDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
swift/XpringSDKDemo.xcodeproj/: project.pbxproj
swift/XpringSDKDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
swift/XpringSDKDemo.xcworkspace/: contents.xcworkspacedata
swift/tmp/: Servers.swift  main.swift
(+99 files in other folders)
