[tool.poetry]
name = "xpring-demo"
version = "1.0.0"
description = "Demonstration of xpring-py"
authors = ["Xpring Engineering"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
xpring = {version = "^0.5.0", extras = ["py"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
